--- a/sass/site.scss
+++ b/sass/site.scss
@@ -1,6 +1,10 @@
 body {
   padding-top: 5rem;
 }
+#navigation, #dashboards, #colors {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
@@ -16,4 +20,74 @@ body {
   color: white;
   padding: 2px 5px;
   border-radius: 4px;
+}
+.fab-top {
+  background-color: lightblue;
+  border-radius: 50%;
+  bottom: 0;
+  box-shadow: 0 0 10px #f7f7f7;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  position: fixed;
+  right: 0;
+  height: 50px;
+  width: 50px;
+  z-index: 1030;
+  &:before {
+    font-family: FontAwesome;
+    font-size: 1.5em;
+    content: "\f148";
+    color: #fff;
+    position: relative;
+    top: 11px;
+    left: 17px;
+  }
+}
+::-moz-selection {
+  background: #fcfcfc;
+  background: rgba(#fff, 0.2);
+  text-shadow: none;
+}
+
+::selection {
+  background: #fcfcfc;
+  background: rgba(#fff, 0.2);
+  text-shadow: none;
+}
+
+img::selection {
+  background: transparent;
+}
+
+img::-moz-selection {
+  background: transparent;
+}
+@-webkit-keyframes pulse {
+  from {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+}
+
+@-moz-keyframes pulse {
+  from {
+    transform: scale(1);
+    -moz-transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+    -moz-transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+    -moz-transform: scale(1);
+  }
 }
