--- a/sass/site.scss
+++ b/sass/site.scss
@@ -5,7 +5,7 @@ body {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-#dashboards, #animations {
+#dashboards, #animations, #assets {
   padding-top: 150px;
   padding-bottom: 150px;
 }
