--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,6 +1,3 @@
-body {
-  padding-top: 5rem;
-}
 #navigation, #colors {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -8,6 +5,9 @@ body {
 #dashboards, #animations, #assets {
   padding-top: 150px;
   padding-bottom: 150px;
+}
+.container {
+  margin-top: 5em;
 }
 .starter-template {
   padding: 3rem 1.5rem;
@@ -37,7 +37,7 @@ body {
   height: 50px;
   width: 50px;
   z-index: 1030;
-  &:before {
+  &::before {
     font-family: FontAwesome;
     font-size: 1.5em;
     content: '\f148';
