--- a/sass/_launcher.scss
+++ b/sass/_launcher.scss
@@ -3,40 +3,103 @@ body {
   background-color: #f7f7f7;
 }
 .launcher {
+  input[type='radio']:checked + .card-pf {
+    border-color: #0088ce;
+  }
+  .card-pf {
+    min-height: 600px;
+  }
+  .list-view-pf-description {
+    width: 100%;
+  }
+  .continue {
+    text-align: center;
+  }
+  .card-pf-title {
+    display: inline-flex;
+    &--title {
+      display: inline-flex;
+      margin-left: 15px;
+      padding-left: 15px;
+      border-left: 1px solid #d7d7d7;
+    }
+  }
+  .card-pf-body--body {
+    height: 300px;
+  }
+  .card-pf-body-description {
+    background-color: #f7f7f7;
+    // height: 75px;
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
   &-container {
     display : grid;
     grid-template-areas: 'nav content';
     height: 100vh;
-    grid-template-columns: 200px 1fr;
-    // grid-gap: 10px;
+    grid-template-columns: 250px 1fr;
     &_nav {
       grid-area: nav;
       display: flex;
       align-items: center;
-      justify-content: left;
-      background-color: #030303;
+      background-color: #292e34;
       .vertical-bar {
-        background-color: #d7d7d7;
+        display: grid;
+        // align-content: space-evenly;
+        align-content: space-between;
+        background-color: #72767b;
         width: 25px;
         height: 100vh;
+        border-radius: 10px;
         margin-left: 15px;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        a {
+          margin-left: -15px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          border-left: 3px solid;
+          border-left-color: transparent;
+          font-weight: 700;
+          transition: background .3s ease-in-out;
+            -webkit-transition: background .3s ease-in-out;
+            -moz-transition: background .3s ease-in-out;
+        }
         &_steps {
-          color: #fff;
+          color: #bbb;
           padding-left: 20px;
-          &--1 {
-            padding-left: 10px;
+          &--1, &--2, &--3, &--4, &--5 {
+            padding-left: 17px;
+            width: 250px;
+            color: #bbb;
+            &:active, &:focus, &:hover {
+              background-color: #72767b;
+              text-decoration: none;
+            }
+            &:active, &:focus {
+              border-left: 3px solid;
+              border-left-color: #0088ce;
+              .step-circle {
+                border: 1px solid #0088ce;
+                background-color: #0088ce;
+                color: #0088ce;
+              }
+            }
           }
-          &--2 {
-            padding-left: 10px;
+          &--title {
+            vertical-align: text-bottom;
           }
         }
       }
     }
     &_main {
       grid-area: content;
-      width: 100%;
       background-color: #d7d7d7;
-      display: flex;
       padding-left: 15px;
     }
   }
@@ -51,6 +114,15 @@ body {
     margin-right: 5px;
     display: inline-flex;
   }
+  .tag-featured-mission {
+    padding: 2px 5px;
+    background-color: #0088ce;
+    color: #fff;
+    font-size: .9em;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
   .box {
     display: inline-block;
     border: 1px solid #d7d7d7;
@@ -64,10 +136,17 @@ body {
     }
   }
   /* Content */
-  #section1, #section2, #section3, #section4, #section5 {
+  #section0 {
+    min-height: 50px;
+  }
+    #MissionRuntime, #TargetEnvironment, #ReleaseStrategy, #GitProvider, #ProjectSummary {
     min-height: 400px;
-    padding-left: 75px;
-    padding-top: 50px;
+    padding-bottom: 200px;
+    margin-top: 100px;
     box-shadow: 0 -2px 2px #d7d7d7;
+    border-bottom: 1px solid #030303;
+  }
+  #MissionRuntime {
+    margin-top: 0;
   }
 }
